{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 84,
  "lineage": "3c4df91b-2aa8-4e2c-3e0f-45dee4d9753b",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:security-group/sg-056300b8179de82cf",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-056300b8179de82cf",
            "ingress": [],
            "name": "itawsdemoeksdev0120210909061728857000000002",
            "name_prefix": "itawsdemoeksdev01",
            "owner_id": "366142015340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itawsdemoeksdev01-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "itawsdemoeksdev01-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:security-group/sg-057e5de6b52584f6b",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-057e5de6b52584f6b",
            "ingress": [],
            "name": "itawsdemoeksdev0120210909061728854900000001",
            "name_prefix": "itawsdemoeksdev01",
            "owner_id": "366142015340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itawsdemoeksdev01-eks_worker_sg",
              "kubernetes.io/cluster/itawsdemoeksdev01": "owned"
            },
            "tags_all": {
              "Name": "itawsdemoeksdev01-eks_worker_sg",
              "kubernetes.io/cluster/itawsdemoeksdev01": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_ingress_cluster_udp_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow pods to communicate with the Core DNS on udp port",
            "from_port": 53,
            "id": "sgrule-1788871045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-057e5de6b52584f6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2372915259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-056300b8179de82cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3240655723",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056300b8179de82cf",
            "self": false,
            "source_security_group_id": "sg-057e5de6b52584f6b",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1453609217",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-057e5de6b52584f6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-811337291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-057e5de6b52584f6b",
            "self": false,
            "source_security_group_id": "sg-056300b8179de82cf",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2685962262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-057e5de6b52584f6b",
            "self": false,
            "source_security_group_id": "sg-056300b8179de82cf",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1997000797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-057e5de6b52584f6b",
            "self": false,
            "source_security_group_id": "sg-057e5de6b52584f6b",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0736bb927854928f9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-44-154.compute-1.amazonaws.com",
            "public_ip": "3.215.44.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08959e9518a69986f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-91-162.compute-1.amazonaws.com",
            "public_ip": "34.193.91.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-038e51f08462ac298",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-244-57.compute-1.amazonaws.com",
            "public_ip": "52.205.244.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:internet-gateway/igw-020ffca57004304db",
            "id": "igw-020ffca57004304db",
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0736bb927854928f9",
            "connectivity_type": "public",
            "id": "nat-0c4f5f30f45d9de32",
            "network_interface_id": "eni-01eaef05b93d3adc0",
            "private_ip": "10.0.101.144",
            "public_ip": "3.215.44.154",
            "subnet_id": "subnet-0d365d62644275e63",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08959e9518a69986f",
            "connectivity_type": "public",
            "id": "nat-0919505132dbe361c",
            "network_interface_id": "eni-07eef34b1013e9f47",
            "private_ip": "10.0.102.56",
            "public_ip": "34.193.91.162",
            "subnet_id": "subnet-0b9b94cd41d5868ae",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038e51f08462ac298",
            "connectivity_type": "public",
            "id": "nat-05010823b3461b452",
            "network_interface_id": "eni-0f3c87a2e7274736b",
            "private_ip": "10.0.103.13",
            "public_ip": "52.205.244.57",
            "subnet_id": "subnet-00066bbcfafae697f",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0649552a6504643d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c4f5f30f45d9de32",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0649552a6504643d6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f01d3fd69984bca31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0919505132dbe361c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f01d3fd69984bca3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-033383c3185b832521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05010823b3461b452",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033383c3185b83252",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-020ffca57004304db",
            "id": "r-rtb-080e74b0b255fbee91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080e74b0b255fbee9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-0649552a6504643d6",
            "id": "rtb-0649552a6504643d6",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-0f01d3fd69984bca3",
            "id": "rtb-0f01d3fd69984bca3",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-033383c3185b83252",
            "id": "rtb-033383c3185b83252",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-080e74b0b255fbee9",
            "id": "rtb-080e74b0b255fbee9",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e301ad0c808a3d53",
            "route_table_id": "rtb-0649552a6504643d6",
            "subnet_id": "subnet-0395bb5c4051c35a5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e80d19a2e062b3a7",
            "route_table_id": "rtb-0f01d3fd69984bca3",
            "subnet_id": "subnet-015caadd7d918e80b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddce3a65007d2f8d",
            "route_table_id": "rtb-033383c3185b83252",
            "subnet_id": "subnet-0fb0933ef6cd98c4b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b41177918f2a941d",
            "route_table_id": "rtb-080e74b0b255fbee9",
            "subnet_id": "subnet-0d365d62644275e63"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a999e2c505d48e32",
            "route_table_id": "rtb-080e74b0b255fbee9",
            "subnet_id": "subnet-0b9b94cd41d5868ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0786e1ccf62f83cc5",
            "route_table_id": "rtb-080e74b0b255fbee9",
            "subnet_id": "subnet-00066bbcfafae697f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-0395bb5c4051c35a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0395bb5c4051c35a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-015caadd7d918e80b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-015caadd7d918e80b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-0fb0933ef6cd98c4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0fb0933ef6cd98c4b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-0d365d62644275e63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0d365d62644275e63",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-0b9b94cd41d5868ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0b9b94cd41d5868ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-00066bbcfafae697f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-00066bbcfafae697f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071371df4b20b7a24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:vpc/vpc-071371df4b20b7a24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0398ef556985a6b7a",
            "default_route_table_id": "rtb-0dfabf4a2195d5964",
            "default_security_group_id": "sg-079136a6123774f9d",
            "dhcp_options_id": "dopt-f402158e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-071371df4b20b7a24",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dfabf4a2195d5964",
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}